# sysmon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sysmon
config/: default_config.yaml
config/profiles/: developer.yaml  minimal.yaml  server.yaml
include/sysmon/: alert_engine.hpp  config_manager.hpp  display.hpp  metrics_collector.hpp  system_monitor.hpp
src/: alert_engine.cpp  config_manager.cpp  display.cpp  main.cpp  metrics_collector.cpp  system_monitor.cpp
src/platform/: metrics_linux.cpp  metrics_macos.cpp  metrics_windows.cpp
tests/: CMakeLists.txt  test_alert_engine.cpp  test_config_manager.cpp  test_main.cpp
tests/test_configs/: test_config.yaml
